# py-jhora-research

./: .dockerignore  .gitignore  .gitmodules  API_DOCS.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  start.py
.github/workflows/: deploy.yml
PyJHora/: README.md  requirements.txt
PyJHora/src/jhora/: README.md
PyJHora/src/jhora/horoscope/dhasa/graha/: vimsottari.py
PyJHora/src/jhora/panchanga/: drik.py
PyJHora/src/jhora/ui/: horo_chart.py  horo_chart_tabs.py  match_ui.py  panchangam.py  test1.py
api/: cities.py  helpers.py  main.py  models.py
api/routes/: charts.py  dhasa.py  eclipse.py  horoscope.py  match.py  panchanga.py  transit.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/charts/: page.tsx
frontend/src/app/dhasa/: page.tsx
frontend/src/app/horoscope/: page.tsx
frontend/src/app/match/: page.tsx
frontend/src/app/tajik/: page.tsx
frontend/src/components/: BirthDataForm.tsx  MiniForm.tsx  Navbar.tsx  NorthIndianChart.tsx  SouthIndianChart.tsx  TajikView.tsx
frontend/src/lib/: BirthDataContext.tsx  api.ts
scripts/: download_ephe.py  extract_ephe.py
tests/: test_dhasa_wrapper.py  test_dosha.py  test_eclipse.py  test_eclipse2.py  verify_divisional.py
